# hsg2

./: .cproject  .ignore  .project  CMakeCache.txt  CMakeLists.txt  HsgSimulator.cpp  HsgSimulator.h  LICENSE  Logger.h  Main.cpp  Makefile  README.md  a.txt  cmake_install.cmake  example.res  example.txt  hsg  install.txt  mytracefile.trace  read.res  read.txt  ru.rb  ruby.sh  rubyread.sh  run.sh  run2.sh  simgrid.trace  types.h  write.res  write.txt
Adder/: Adder.cpp  Adder.h  Adder_test.cpp
Default/: makefile  objects.mk  sources.mk  subdir.mk
commons/: CtrType.h  Types.h
distributions/: RandClass.cpp  RandClass.h
hdfs/: Chunk.cpp  Chunk.h  Client.cpp  Client.h  Client2.cpp  DataNode.cpp  DataNode.h  DirFiles.cpp  DirFiles.h  Hdd.cpp  Hdd.h  HdfsClient.cpp  HdfsClient.h  HdfsClient_test.cpp  HdfsFile.cpp  HdfsFile.h  NameNode.cpp  NameNode.h
mapreduce/: AppMaster.cpp  AppMaster.h  AsyncWriter.cpp  AsyncWriter.h  Combiner.cpp  Combiner.h  Copier.cpp  Copier.h  Counter.cpp  Counter.h  JobInfo.cpp  JobInfo.h  JsonJob.cpp  JsonJob.h  MRClient.cpp  MRClient.h  Mapper.cpp  Mapper.h  Merger.cpp  Merger.h  Partitioner.cpp  Partitioner.h  Reducer.cpp  Reducer.h
messages/: HddMsg.cpp  HddMsg.h  Message.cpp  Message.h
res/: ex128.txt  ex16.txt  ex64.txt  ex96.txt
resources/: JsonPlatform.cpp  JsonPlatform.h  hsgDeploy.xml  hsgPlatform.xml  master-workers_d.xml  master-workers_d2.xml  master-workers_d3.xml  master-workers_d4.xml  master-workers_d5.xml  small_platform2.xml  small_platform3.xml  small_platform4.xml  small_platform5.xml
yarn/: Capacity.cpp  Capacity.h  CapacityScheduler.cpp  CapacityScheduler.h  FIFOScheduler.cpp  FIFOScheduler.h  FairScheduler.cpp  (+13 more)
(+92 files in other folders)
